--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,21 @@
           <version>2.1.214</version>
           <scope>runtime</scope>
       </dependency>
-
+      <dependency>
+          <groupId>org.jboss.weld.servlet</groupId>
+          <artifactId>weld-servlet-core</artifactId>
+          <version>4.0.0.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.jboss.weld</groupId>
+          <artifactId>weld-core-impl</artifactId>
+          <version>4.0.3.Final</version>
+      </dependency>
+      <dependency>
+          <groupId>org.apache.openwebbeans</groupId>
+          <artifactId>openwebbeans-impl</artifactId>
+          <version>2.0.15</version>
+      </dependency>
   </dependencies>
   <build>
     <finalName>mvc</finalName>
