--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -7,10 +7,16 @@
      </session-config>
      <filter>
          <filter-name>AuthorizationFilter</filter-name>
-         <filter-class>servlet.AuthorizationFilter</filter-class>
+         <filter-class>controller.AuthController.AuthorizationFilter</filter-class>
      </filter>
      <filter-mapping>
          <filter-name>AuthorizationFilter</filter-name>
          <url-pattern>/index.jsp</url-pattern>
      </filter-mapping>
+     <resource-env-ref>
+         <resource-env-ref-name>BeanManager</resource-env-ref-name>
+         <resource-env-ref-type>
+             jakarta.enterprise.inject.spi.BeanManager
+         </resource-env-ref-type>
+     </resource-env-ref>
 </web-app>
